PSP/borradores/ae/jwt/MUNDIALREST/src/main/java/org/example/mundialrest/common/errors/UnauthorizedOperationException.java
package org.example.mundialrest.common.errors;

public class UnauthorizedOperationException extends RuntimeException {
    public UnauthorizedOperationException(String message) {
        super(message);
    }
}

